@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.pipelines.VCMapLoader" >
-        <property name="version" value="VCMap Loader  -- build Jan 03, 2022" />
+        <property name="version" value="VCMap Loader  -- build Jan 16, 2023" />
         <property name="nr" value="5"/>
         <property name="dao" ref="dao"/>
     </bean>
