@@ -1,3 +1,6 @@
+Jan 16, 2023
+  updated build.gradle to be gradle 6.x + compatible
+
 Jan 03, 2022
   updated log4j to avoid zero day exploit
 
